# pai-strace

./: .gitignore  Cargo.toml  Makefile.toml  README.md  createrelease.toml
.cargo/: config.toml
src/: args.rs  main.rs  state.rs  writers.rs
