[package]
name = "pai-strace"
version = "0.1.7"
edition = "2021"
license-file = "LICENSE"
description = "A strace-like tool created using pai"
readme = "README.md"
homepage = "https://github.com/rstenvi/pai-strace"
repository = "https://github.com/rstenvi/pai-strace"
keywords = ["strace", "trace", "syscall"]

[profile.release]
strip = "debuginfo"
lto = true
debug-assertions = false
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Tracing engine
# pai = { version = "0.1", features = ["syscalls"] }
pai = { version = "0.1", git = "https://github.com/rstenvi/pai", features = ["syscalls"] }

# Use for local testing
# pai = { path = "../pai", features = ["syscalls"] }

# Argument parsing
clap = { version = "4", features = ["derive"] }
clap-verbosity-flag = { version = "2" }

# Error handling
anyhow = "1"

# Logging
log = {version = "0.4", features = ["release_max_level_info"]}
# log = "0.4"
pretty_env_logger = { version = "0.5" }

# Write syscalls as structured JSON
struson = { version = "0.4", features = ["serde"]}
serde = { version = "1", features = ["derive"]}

# Check if we are the newest version
check-latest = "1.0.2"

